# STLRepairTool

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  pyproject.toml  pytest.ini  repair-stl.ps1  repair-stl.sh  repair_stl.py  repair_test_results.md  run_repair_test.py
tests/: conftest.py  test_batch_repair.py  test_check_watertight.py  test_cli.py  test_discover_stl_files.py  test_main_entry_point.py  test_mesh_fixtures.py  test_print_batch_summary.py  test_repair_mesh.py  test_repair_mesh_windows.py  test_repair_single_file.py  test_worker_repair_file.py
